# wake

./: Cargo.toml  LICENSE  README.md
docs/: setup.md
src/: cli.rs  daemon.rs  doctor.rs  error.rs  ipc.rs  lib.rs  main.rs  model.rs  output.rs  paths.rs  state.rs
src/backend/: gnome.rs  kde.rs  logind.rs  mod.rs  portal.rs  screensaver.rs  wayland.rs  windows.rs  x11.rs
src/platform/: linux.rs  mod.rs  windows.rs
tests/: daemon_lifecycle.rs  model.rs
